__HEADER__(`Octave News Archive')

<div class="section">
<dl>
<dt>June 24, 2011</dt>
<dd>Version 3.4.2 has been released and is now available for ftp.
Octave 3.4.2 fixes some minor installation problems that affected
version 3.4.1.  See the __OCTAVE_HTTP__(`NEWS-3.4.html', `NEWS') file
for a list of changes.
<dt>June 15, 2011</dt>
<dd>Version 3.4.1 has been released and is now available for ftp.
Octave 3.4.1 is primarily a bug fixing release.  See the
__OCTAVE_HTTP__(`NEWS-3.4.html', `NEWS') file for a list of changes
since the previous release.</dd>
<dt>February 8, 2011</dt>
<dd>Version 3.4.0 has been released and is now available for ftp.
Octave 3.4.0 is a major new release.  See the
__OCTAVE_HTTP__(`NEWS-3.4.html', `NEWS') file for a list of
user-visible changes.</dd>
<dt>November 19, 2010</dt>
<dd>A new snapshot of the current development version of Octave is
available for ftp (3.3.54).  You should only be using this version if you are
interested in testing the latest features and don't mind hitting the
occasional bug.  Note that this snapshot is available from
<tt>alpha.gnu.org</tt>, not <tt>ftp.octave.org</tt></dd>
<dt>October 19, 2010</dt>
<dd>A new snapshot of the current development version of Octave is
available for ftp (3.3.53).  You should only be using this version if you are
interested in testing the latest features and don't mind hitting the
occasional bug.</dd>
<dt>August 1, 2010</dt>
<dd>A new snapshot of the current development version of Octave is
available for ftp (3.3.52).  You should only be using this version if you are
interested in testing the latest features and don't mind hitting the
occasional bug.</dd>
<dt>March 24, 2010</dt>
<dd>A new snapshot of the current development version of Octave is
available for ftp (3.3.51).  You should only be using this version if you are
interested in testing the latest features and don't mind hitting the
occasional bug.</dd>
<dt>March 24, 2010</dt>