@@ -1,4 +1,9 @@
 <pre>
+Summary of important user-visible changes for version 3.4.3:
+-----------------------------------------------------------
+
+ ** Octave 3.4.3 is a bug fixing release.
+
 Summary of important user-visible changes for version 3.4.2:
 -----------------------------------------------------------
 
