@@ -68,11 +68,11 @@ instead (see below for details).
 <th>Release Date</th></tr>
 <tr><td class="download">
 <a href="ftp://ftp.gnu.org/gnu/octave/">Stable</a></td>
-<td class="download">3.4.2
-    (<a href="ftp://ftp.gnu.org/gnu/octave/octave-3.4.2.tar.gz">.tar.gz</a>)
-    (<a href="ftp://ftp.gnu.org/gnu/octave/octave-3.4.2.tar.bz2">.tar.bz2</a>)
+<td class="download">3.4.3
+    (<a href="ftp://ftp.gnu.org/gnu/octave/octave-3.4.3.tar.gz">.tar.gz</a>)
+    (<a href="ftp://ftp.gnu.org/gnu/octave/octave-3.4.3.tar.bz2">.tar.bz2</a>)
 </td>
-<td class="download">24 June 2011</td></tr>
+<td class="download">10 October 2011</td></tr>
 
 </table>
 </div>
