@@ -32,7 +32,7 @@ instead (see below for details).
 </dd>
 </dl>
 
-__DOWNLOAD_INFO__(`3.4.2', `24 June 2011')
+__DOWNLOAD_INFO__(`3.4.3', `10 October 2011')
 </div>
 
 <div class="section">
